--- a/cfgs/vmrdcompv1_faster_rcnn_vmrn_res50.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_vmrn_res50.yml
@@ -1,7 +1,7 @@
 EXP_DIR: res101
 TRAIN:
   COMMON:
-    LEARNING_RATE: 0.002
+    LEARNING_RATE: 0.001
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     LR_DECAY_STEPSIZE: [100000]
     GAMMA : 0.1
@@ -12,8 +12,8 @@ TRAIN:
     USE_VERTICAL_ROTATED : True
     DISPLAY: 20
     DOUBLE_BIAS: True
-    SNAPSHOT_ITERS: 20000
-    SNAPSHOT_AFTER_TEST: False
+    SNAPSHOT_ITERS: 10000
+    SNAPSHOT_AFTER_TEST: True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
