--- a/cfgs/cornell_fcgn_res101.yml
+++ b/cfgs/cornell_fcgn_res101.yml
@@ -13,16 +13,20 @@ TRAIN:
     AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
     AUGMENTER: Augmentation_Grasp()
     INPUT_SIZE : 320
+    SNAPSHOT_ITERS: 100
+    SNAPSHOT_AFTER_TEST: True
   FCGN:
     BBOX_POSITIVE_WEIGHTS: 2.0
-    ANGLE_THRESH: 15.
+    ANGLE_MATCH: True
+    ANGLE_THRESH: 22.5
+    JACCARD_THRESH: 0.5
 TEST:
   COMMON:
     FIXED_INPUT_SIZE: True
     AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
     AUGMENTER: Augmentation_Grasp_Test()
 FCGN:
-  FEAT_STRIDE : [32]
-  ANCHOR_ANGLES : [-75., -45., -15., 15., 45., 75.]
+  FEAT_STRIDE : [16]
+  ANCHOR_ANGLES : [-67.5, -22.5, 22.5, 67.5]
   ANCHOR_RATIOS : [1.]
   ANCHOR_SCALES : [1.5]
