--- a/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
@@ -12,8 +12,8 @@ TRAIN:
     USE_VERTICAL_ROTATED : True
     DISPLAY: 20
     DOUBLE_BIAS: True
-    SNAPSHOT_ITERS: 20000
-    SNAPSHOT_AFTER_TEST: False
+    SNAPSHOT_ITERS: 10000
+    SNAPSHOT_AFTER_TEST: True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
