--- a/cfgs/vmrdcompv1_faster_rcnn_vmrn_vgg16.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_vmrn_vgg16.yml
@@ -3,7 +3,7 @@ TRAIN:
   COMMON:
     LEARNING_RATE: 0.002
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [300000]
+    LR_DECAY_STEPSIZE: [100000]
     GAMMA : 0.1
     IMS_PER_BATCH : 2
     MAX_EPOCH: 100
@@ -12,10 +12,10 @@ TRAIN:
     USE_VERTICAL_ROTATED : True
     DISPLAY: 20
     DOUBLE_BIAS: True
-    SNAPSHOT_ITERS: 20000
-    SNAPSHOT_AFTER_TEST: False
-    AUGMENTER: Augmentation_VMRD()
-    AUGMENTATION: True
+    SNAPSHOT_ITERS: 10000
+    SNAPSHOT_AFTER_TEST: True
+    # AUGMENTER: Augmentation_VMRD()
+    # AUGMENTATION: True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
