--- a/cfgs/pascal_voc_faster_rcnn_res101.yml
+++ b/cfgs/pascal_voc_faster_rcnn_res101.yml
@@ -12,6 +12,7 @@ TRAIN:
     USE_FOCAL_LOSS : False
     FOCAL_LOSS_GAMMA : 2
     FOCAL_LOSS_ALPHA : 0.25
+    SNAPSHOT_AFTER_TEST : True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
