--- a/cfgs/pascal_voc_fpn_res101.yml
+++ b/cfgs/pascal_voc_fpn_res101.yml
@@ -1,21 +1,22 @@
 EXP_DIR: res101
 TRAIN:
   COMMON:
-    LEARNING_RATE: 0.02
+    LEARNING_RATE: 0.001
     LR_DECAY_STEPSIZE: [50000]
-    IMS_PER_BATCH : 1
+    IMS_PER_BATCH : 4
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
     DISPLAY: 20
     WEIGHT_DECAY: 0.0001
     DOUBLE_BIAS: True
+    SNAPSHOT_AFTER_TEST : True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
     RPN_BATCHSIZE: 256
     BG_THRESH_LO: 0.0
     BATCH_SIZE: 256
-    SCALES: [800,]
+    SCALES: [600,]
     RPN_PRE_NMS_TOP_N : 12000
     RPN_POST_NMS_TOP_N : 400
 TEST:
@@ -24,7 +25,7 @@ TEST:
   RCNN_COMMON:
     HAS_RPN: True
     # FPN
-    SCALES: [800,]
+    SCALES: [600,]
     RPN_PRE_NMS_TOP_N : 6000
     RPN_POST_NMS_TOP_N : 1000
 RCNN_COMMON:
@@ -35,6 +36,6 @@ RCNN_COMMON:
   ANCHOR_RATIOS: [0.5, 1, 2]
   FEAT_STRIDE: [4, 8, 16, 32, 64]
 FPN:
-  SHARE_RPN: False
+  SHARE_RPN: True
   SHARE_HEADER: True
-  UNSAMPLE_CONV: False
+  UPSAMPLE_CONV: False
