--- a/cfgs/cornell_fcgn_res101.yml
+++ b/cfgs/cornell_fcgn_res101.yml
@@ -1,4 +1,6 @@
 EXP_DIR: res101
+SCALES: [320,]
+FIXED_INPUT_SIZE : True
 TRAIN:
   COMMON:
     LEARNING_RATE : 0.002
@@ -9,10 +11,7 @@ TRAIN:
     IMS_PER_BATCH : 16
     DISPLAY : 20
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    FIXED_INPUT_SIZE : True
     AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
-    AUGMENTER: Augmentation_Grasp()
-    INPUT_SIZE : 320
     SNAPSHOT_ITERS: 100
     SNAPSHOT_AFTER_TEST: True
   FCGN:
@@ -20,11 +19,6 @@ TRAIN:
     ANGLE_MATCH: True
     ANGLE_THRESH: 22.5
     JACCARD_THRESH: 0.5
-TEST:
-  COMMON:
-    FIXED_INPUT_SIZE: True
-    AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
-    AUGMENTER: Augmentation_Grasp_Test()
 FCGN:
   FEAT_STRIDE : [16]
   ANCHOR_ANGLES : [-67.5, -22.5, 22.5, 67.5]
