--- a/cfgs/cornell_fcgn_res50.yml
+++ b/cfgs/cornell_fcgn_res50.yml
@@ -1,4 +1,6 @@
 EXP_DIR: res50
+SCALES: [320,]
+FIXED_INPUT_SIZE : True
 TRAIN:
   COMMON:
     LEARNING_RATE : 0.002
@@ -9,18 +11,10 @@ TRAIN:
     IMS_PER_BATCH : 16
     DISPLAY : 20
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    FIXED_INPUT_SIZE : True
     AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
-    AUGMENTER: Augmentation_Grasp()
-    INPUT_SIZE : 320
   FCGN:
     BBOX_POSITIVE_WEIGHTS: 2.0
     ANGLE_THRESH: 15.
-TEST:
-  COMMON:
-    FIXED_INPUT_SIZE: True
-    AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
-    AUGMENTER: Augmentation_Grasp_Test()
 FCGN:
   FEAT_STRIDE : [32]
   ANCHOR_ANGLES : [-75., -45., -15., 15., 45., 75.]
