--- a/cfgs/cornell_fcgn_vgg16.yml
+++ b/cfgs/cornell_fcgn_vgg16.yml
@@ -1,4 +1,6 @@
 EXP_DIR: vgg16
+SCALES: [320,]
+FIXED_INPUT_SIZE : True
 TRAIN:
   COMMON:
     LEARNING_RATE : 0.001
@@ -9,10 +11,7 @@ TRAIN:
     MAX_EPOCH: 2000
     DISPLAY : 20
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    FIXED_INPUT_SIZE : True
     AUGMENTATION : True
-    AUGMENTER: Augmentation_Grasp()
-    INPUT_SIZE : 320
     SNAPSHOT_ITERS: 100
     SNAPSHOT_AFTER_TEST: True
   FCGN:
@@ -22,11 +21,6 @@ TRAIN:
     ANGLE_THRESH: 15.
     #ANGLE_THRESH: 11.25
     JACCARD_THRESH: 0.5
-TEST:
-  COMMON:
-    FIXED_INPUT_SIZE: True
-    AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
-    AUGMENTER: Augmentation_Grasp_Test()
 FCGN:
   FEAT_STRIDE : [32]
   ANCHOR_ANGLES : [-75., -45., -15., 15., 45., 75.]
