--- a/cfgs/pascal_voc_ssd_vgg16.yml
+++ b/cfgs/pascal_voc_ssd_vgg16.yml
@@ -1,4 +1,6 @@
 EXP_DIR: vgg16
+SCALES: [300,]
+FIXED_INPUT_SIZE : True
 TRAIN:
   COMMON:
     LEARNING_RATE: 0.01
@@ -12,6 +14,4 @@ TRAIN:
     SNAPSHOT_ITERS : 5000
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
-    FIXED_INPUT_SIZE : True
     AUGMENTATION : True
-    INPUT_SIZE : 300
