--- a/cfgs/vmrdcompv1_ssd_vmrn_res50.yml
+++ b/cfgs/vmrdcompv1_ssd_vmrn_res50.yml
@@ -1,4 +1,6 @@
 EXP_DIR: res50
+SCALES : [300,]
+FIXED_INPUT_SIZE : True
 TRAIN:
   COMMON:
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
@@ -9,20 +11,15 @@ TRAIN:
     MAX_EPOCH: 100
     WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
-    USE_VERTICAL_ROTATED : True
     DISPLAY: 20
     DOUBLE_BIAS: True
     SNAPSHOT_ITERS: 10000
     SNAPSHOT_AFTER_TEST: False
-    FIXED_INPUT_SIZE : True
-    INPUT_SIZE : 300
     AUGMENTATION : True
-    AUGMENTER : Augmentation_VMRD()
   VMRN:
     ONLINEDATA_BEGIN_ITER: 10000
 TEST:
   COMMON:
-    FIXED_INPUT_SIZE: True
     OBJ_DET_THRESHOLD: 0.5
 SSD:
   FEATURE_MAPS : [38, 19, 10, 5, 3, 1]
