--- a/cfgs/pascal_voc_faster_rcnn_res101.yml
+++ b/cfgs/pascal_voc_faster_rcnn_res101.yml
@@ -5,6 +5,7 @@ TRAIN:
     LEARNING_RATE: 0.001
     LR_DECAY_STEPSIZE: [50000]
     IMS_PER_BATCH : 4
+    AUGMENTATION: True
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
     DISPLAY: 20
