--- a/cfgs/vmrdcompv1_faster_rcnn_res101.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_res101.yml
@@ -8,6 +8,7 @@ TRAIN:
     WEIGHT_DECAY: 0.0001
     DOUBLE_BIAS: False
     LEARNING_RATE: 0.001
+    AUGMENTATION: True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
