--- a/cfgs/pascal_voc_faster_rcnn_res101.yml
+++ b/cfgs/pascal_voc_faster_rcnn_res101.yml
@@ -3,17 +3,14 @@ SCALES: [600,]
 TRAIN:
   COMMON:
     LEARNING_RATE: 0.001
-    LR_DECAY_STEPSIZE: [50000]
+    LR_DECAY_STEPSIZE: [12000]
+    SNAPSHOT_ITERS: 1250
     IMS_PER_BATCH : 4
-    AUGMENTATION: True
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
     DISPLAY: 20
     WEIGHT_DECAY: 0.0001
     DOUBLE_BIAS: True
-    USE_FOCAL_LOSS : False
-    FOCAL_LOSS_GAMMA : 2
-    FOCAL_LOSS_ALPHA : 0.25
     SNAPSHOT_AFTER_TEST : True
   RCNN_COMMON:
     HAS_RPN: True
@@ -23,7 +20,6 @@ TRAIN:
     BATCH_SIZE: 256
     RPN_PRE_NMS_TOP_N : 12000
     RPN_POST_NMS_TOP_N : 2000
-    RPN_USE_FOCAL_LOSS : False
 TEST:
   COMMON:
     OBJ_DET_THRESHOLD: 0.5
