--- a/cfgs/pascal_voc_fpn_res101.yml
+++ b/cfgs/pascal_voc_fpn_res101.yml
@@ -2,8 +2,9 @@ EXP_DIR: res101
 SCALES: [600,]
 TRAIN:
   COMMON:
-    LEARNING_RATE: 0.0001
-    LR_DECAY_STEPSIZE: [50000]
+    LEARNING_RATE: 0.001
+    LR_DECAY_STEPSIZE: [12000]
+    SNAPSHOT_ITERS: 1250
     IMS_PER_BATCH : 4
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
@@ -29,7 +30,6 @@ TEST:
 RCNN_COMMON:
   POOLING_SIZE: 7
   POOLING_MODE: align
-  # FPN
   ANCHOR_SCALES: [8, ]
   ANCHOR_RATIOS: [0.5, 1, 2]
   FEAT_STRIDE: [4, 8, 16, 32, 64]
