--- a/cfgs/pascal_voc_faster_rcnn_res101.yml
+++ b/cfgs/pascal_voc_faster_rcnn_res101.yml
@@ -3,9 +3,11 @@ SCALES: [600,]
 TRAIN:
   COMMON:
     LEARNING_RATE: 0.001
-    LR_DECAY_STEPSIZE: [12000]
-    SNAPSHOT_ITERS: 1250
-    IMS_PER_BATCH : 4
+    LR_DECAY_STEPSIZE: [80000]
+    SNAPSHOT_ITERS: 5000
+    IMS_PER_BATCH : 1
+    MAX_EPOCH: 30
+    AUGMENTATION: True
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
     DISPLAY: 20
