--- a/cfgs/cornell_fcgn_vgg16.yml
+++ b/cfgs/cornell_fcgn_vgg16.yml
@@ -7,8 +7,8 @@ TRAIN:
     LR_DECAY_STEPSIZE: [0]
     GAMMA : 0.0001
     WEIGHT_DECAY: 0.003
-    IMS_PER_BATCH : 16
     MAX_EPOCH: 2000
+    IMS_PER_BATCH : 16
     DISPLAY : 20
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     AUGMENTATION : True
@@ -17,14 +17,10 @@ TRAIN:
   FCGN:
     BBOX_POSITIVE_WEIGHTS: 2.0
     ANGLE_MATCH: True
-    #ANGLE_THRESH: 22.5
-    ANGLE_THRESH: 15.
-    #ANGLE_THRESH: 11.25
+    ANGLE_THRESH: 22.5
     JACCARD_THRESH: 0.5
 FCGN:
   FEAT_STRIDE : [32]
   ANCHOR_ANGLES : [-75., -45., -15., 15., 45., 75.]
-  #ANCHOR_ANGLES : [-67.5, -22.5, 22.5, 67.5]
-  #ANCHOR_ANGLES : [ -78.75, -56.25, -33.75, -11.25, 11.25, 33.75, 56.25, 78.75 ]
   ANCHOR_RATIOS : [1.]
   ANCHOR_SCALES : [1.5]
