--- a/cfgs/vmrdcompv1_mgn_res101.yml
+++ b/cfgs/vmrdcompv1_mgn_res101.yml
@@ -3,29 +3,28 @@ SCALES: [800,]
 TRAIN:
   COMMON:
     LEARNING_RATE : 0.001
-    LR_DECAY_STEPSIZE: [200000]
+    LR_DECAY_STEPSIZE: [80000]
     GAMMA : 0.1
-    WEIGHT_DECAY: 0.0005
-    MAX_EPOCH: 30
-    IMS_PER_BATCH : 2
-    DISPLAY : 20
-    BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    # AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
     SNAPSHOT_ITERS: 10000
+    IMS_PER_BATCH : 2
+    MAX_EPOCH: 30
+    # AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
+    BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
+    DISPLAY : 20
+    WEIGHT_DECAY: 0.0005
+    DOUBLE_BIAS: True
+    SNAPSHOT_AFTER_TEST : True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
     RPN_BATCHSIZE: 256
     BG_THRESH_LO: 0.0
     BATCH_SIZE: 256
-    # FPN
     RPN_PRE_NMS_TOP_N : 12000
     RPN_POST_NMS_TOP_N : 2000
   FCGN:
     BBOX_POSITIVE_WEIGHTS: 2.0
-    ##########
     ANGLE_THRESH: 22.5
-    # ANGLE_THRESH: 15.
 TEST:
   COMMON:
     OBJ_DET_THRESHOLD: 0.7
@@ -35,22 +34,16 @@ TEST:
     RPN_POST_NMS_TOP_N : 300
 FCGN:
   FEAT_STRIDE : [16,]
-  #############
   ANCHOR_ANGLES : [-67.5, -22.5, 22.5, 67.5]
-  # ANCHOR_ANGLES : [-75., -45., -15., 15., 45., 75.]
-  #############
   ANCHOR_RATIOS : [1.]
   ANCHOR_SCALES : [0.75]
   BBOX_NORMALIZE_STDS: [0.4, 0.4, 0.4, 0.4, 0.4]
 RCNN_COMMON:
   POOLING_SIZE: 7
   POOLING_MODE: align
-  # FPN
   ANCHOR_SCALES: [8, 16, 32]
   ANCHOR_RATIOS: [0.5, 1, 2, 3]
   FEAT_STRIDE: [16,]
 MGN:
-  #############
   USE_ADAPTIVE_ANCHOR: False
-  #############
-  OBJECT_GRASP_BALANCE: 1
+  OBJECT_GRASP_BALANCE: 1.
