--- a/cfgs/pascal_voc_faster_rcnn_vgg16.yml
+++ b/cfgs/pascal_voc_faster_rcnn_vgg16.yml
@@ -12,7 +12,7 @@ TRAIN:
     DISPLAY: 20
     WEIGHT_DECAY: 0.0001
     DOUBLE_BIAS: True
-    SNAPSHOT_AFTER_TEST : False
+    SNAPSHOT_AFTER_TEST : True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
