rewrite Faster_Rcnn_Vmrn

--- a/cfgs/pascal_voc_faster_rcnn_res101.yml
+++ b/cfgs/pascal_voc_faster_rcnn_res101.yml
@@ -5,14 +5,14 @@ TRAIN:
     LEARNING_RATE: 0.001
     LR_DECAY_STEPSIZE: [10000]
     SNAPSHOT_ITERS: 1250
-    IMS_PER_BATCH : 2
+    IMS_PER_BATCH : 4
     MAX_EPOCH: 20
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
     DISPLAY: 20
     WEIGHT_DECAY: 0.0001
     DOUBLE_BIAS: True
-    SNAPSHOT_AFTER_TEST : False
+    SNAPSHOT_AFTER_TEST : True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
