--- a/cfgs/pascal_voc_ssd_vgg16.yml
+++ b/cfgs/pascal_voc_ssd_vgg16.yml
@@ -12,6 +12,7 @@ TRAIN:
     DISPLAY: 20
     DOUBLE_BIAS: True
     SNAPSHOT_ITERS : 5000
+    SNAPSHOT_AFTER_TEST : True
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
     AUGMENTATION : True
