rewrite FCGN MGN (unfinished)

--- a/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
@@ -4,7 +4,7 @@ TRAIN:
   COMMON:
     LEARNING_RATE: 0.002
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [20000]
+    LR_DECAY_STEPSIZE: [100000]
     GAMMA : 0.1
     IMS_PER_BATCH : 2
     MAX_EPOCH: 100
@@ -12,6 +12,7 @@ TRAIN:
     PROPOSAL_METHOD: gt
     DISPLAY: 20
     DOUBLE_BIAS: True
+    AUGMENTATION: True
     SNAPSHOT_ITERS: 2000
     SNAPSHOT_AFTER_TEST: True
   RCNN_COMMON:
