--- a/cfgs/cornell_mgn_res101.yml
+++ b/cfgs/cornell_mgn_res101.yml
@@ -7,13 +7,13 @@ TRAIN:
     GAMMA : 0.0003
     WEIGHT_DECAY: 0.002
     MAX_EPOCH: 300
-    IMS_PER_BATCH : 4
+    IMS_PER_BATCH : 2
     DISPLAY : 20
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    # USE_VERTICAL_ROTATED : True
-    AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
+    AUGMENTATION : True
     SNAPSHOT_ITERS: 400
     SNAPSHOT_AFTER_TEST: True
+    BBOX_REG: False
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
