--- a/cfgs/pascal_voc_ssd_vgg16.yml
+++ b/cfgs/pascal_voc_ssd_vgg16.yml
@@ -1,17 +1,19 @@
 EXP_DIR: vgg16
 SCALES: [300,]
 FIXED_INPUT_SIZE : True
+VGG:
+  FIXED_BLOCKS: 0
 TRAIN:
   COMMON:
-    LEARNING_RATE: 0.01
+    LEARNING_RATE: 0.02
     WEIGHT_DECAY: 0.0001
-    LR_DECAY_STEPSIZE: [80000]
+    LR_DECAY_STEPSIZE: [40000]
     GAMMA : 0.1
-    IMS_PER_BATCH : 16
+    IMS_PER_BATCH : 32
     MAX_EPOCH: 400
     DISPLAY: 20
     DOUBLE_BIAS: True
-    SNAPSHOT_ITERS : 5000
+    SNAPSHOT_ITERS : 2500
     SNAPSHOT_AFTER_TEST : True
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
