--- a/cfgs/vmrdcompv1_all_in_one_res101.yml
+++ b/cfgs/vmrdcompv1_all_in_one_res101.yml
@@ -4,16 +4,16 @@ TRAIN:
   COMMON:
     LEARNING_RATE: 0.001
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [200000]
+    LR_DECAY_STEPSIZE: [300000]
     GAMMA : 0.1
     IMS_PER_BATCH : 1
-    MAX_EPOCH: 30
+    MAX_EPOCH: 100
     WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
-    AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
+    AUGMENTATION : True
     DISPLAY: 20
     DOUBLE_BIAS: True
-    SNAPSHOT_ITERS: 10000
+    SNAPSHOT_ITERS: 4000
     SNAPSHOT_AFTER_TEST: False
   RCNN_COMMON:
     HAS_RPN: True
