--- a/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
@@ -4,9 +4,9 @@ TRAIN:
   COMMON:
     LEARNING_RATE: 0.002
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [40000]
+    LR_DECAY_STEPSIZE: [80000]
     GAMMA : 0.1
-    IMS_PER_BATCH : 2
+    IMS_PER_BATCH : 1
     MAX_EPOCH: 30
     WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
@@ -14,6 +14,7 @@ TRAIN:
     DOUBLE_BIAS: True
     SNAPSHOT_ITERS: 2000
     SNAPSHOT_AFTER_TEST: True
+    AUGMENTATION: True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
