fix bugs of visualizer

--- a/cfgs/vmrdcompv1_all_in_one_res101.yml
+++ b/cfgs/vmrdcompv1_all_in_one_res101.yml
@@ -14,7 +14,7 @@ TRAIN:
     DISPLAY: 20
     DOUBLE_BIAS: True
     SNAPSHOT_ITERS: 4000
-    SNAPSHOT_AFTER_TEST: False
+    SNAPSHOT_AFTER_TEST: True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
