--- a/cfgs/pascal_voc_faster_rcnn_res101.yml
+++ b/cfgs/pascal_voc_faster_rcnn_res101.yml
@@ -2,17 +2,18 @@ EXP_DIR: res101
 SCALES: [600,]
 TRAIN:
   COMMON:
-    LEARNING_RATE: 0.001
-    LR_DECAY_STEPSIZE: [10000]
-    SNAPSHOT_ITERS: 1250
+    LEARNING_RATE: 0.004
+    LR_DECAY_STEPSIZE: [12000]
+    SNAPSHOT_ITERS: 1200
     IMS_PER_BATCH : 4
-    MAX_EPOCH: 20
+    MAX_EPOCH: 15
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
     DISPLAY: 20
     WEIGHT_DECAY: 0.0001
     DOUBLE_BIAS: True
     SNAPSHOT_AFTER_TEST : True
+    AUGMENTATION: True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
