--- a/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
@@ -4,10 +4,10 @@ TRAIN:
   COMMON:
     LEARNING_RATE: 0.002
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [300000]
+    LR_DECAY_STEPSIZE: [50000]
     GAMMA : 0.1
-    IMS_PER_BATCH : 1
-    MAX_EPOCH: 100
+    IMS_PER_BATCH : 2
+    MAX_EPOCH: 30
     WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
     DISPLAY: 20
@@ -25,6 +25,7 @@ TRAIN:
     RPN_POST_NMS_TOP_N : 2000
   VMRN:
     ONLINEDATA_BEGIN_ITER: 10000
+    TRAINING_DATA: 'offline'
 TEST:
   RCNN_COMMON:
     HAS_RPN: True
