--- a/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
@@ -4,10 +4,10 @@ TRAIN:
   COMMON:
     LEARNING_RATE: 0.002
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [80000]
+    LR_DECAY_STEPSIZE: [120000]
     GAMMA : 0.1
     IMS_PER_BATCH : 2
-    MAX_EPOCH: 12
+    MAX_EPOCH: 20
     WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
     DISPLAY: 20
@@ -25,7 +25,8 @@ TRAIN:
     RPN_POST_NMS_TOP_N : 2000
   VMRN:
     ONLINEDATA_BEGIN_ITER: 10000
-    TRAINING_DATA: 'offline'
+    TRAINING_DATA: 'all'
+    USE_REL_GRADIENTS: True
 TEST:
   RCNN_COMMON:
     HAS_RPN: True
