--- a/cfgs/vmrdcompv1_faster_rcnn_vmrn_vgg16.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_vmrn_vgg16.yml
@@ -7,14 +7,14 @@ TRAIN:
     LR_DECAY_STEPSIZE: [100000]
     GAMMA : 0.1
     IMS_PER_BATCH : 2
-    MAX_EPOCH: 100
+    MAX_EPOCH: 30
     WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
     DISPLAY: 20
     DOUBLE_BIAS: True
     SNAPSHOT_ITERS: 10000
     SNAPSHOT_AFTER_TEST: True
-    # AUGMENTATION: True
+    AUGMENTATION: True
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
