codes for generating paths for grasp execution

--- a/cfgs/vmrdcompv1_mgn_res101.yml
+++ b/cfgs/vmrdcompv1_mgn_res101.yml
@@ -2,18 +2,19 @@ EXP_DIR: res101
 SCALES: [800,]
 TRAIN:
   COMMON:
-    LEARNING_RATE : 0.002
-    LR_DECAY_STEPSIZE: [50000]
+    LEARNING_RATE : 0.001
+    LR_DECAY_STEPSIZE: [100000]
     GAMMA : 0.1
     SNAPSHOT_ITERS: 2000
     IMS_PER_BATCH : 2
-    MAX_EPOCH: 40
+    MAX_EPOCH: 30
     AUGMENTATION : True
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     DISPLAY : 20
     WEIGHT_DECAY: 0.0005
     DOUBLE_BIAS: True
-    SNAPSHOT_AFTER_TEST : True
+    SNAPSHOT_AFTER_TEST : False
+    BBOX_REG: False
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
