--- a/cfgs/vmrdcompv1_mgn_res101.yml
+++ b/cfgs/vmrdcompv1_mgn_res101.yml
@@ -13,7 +13,7 @@ TRAIN:
     DISPLAY : 20
     WEIGHT_DECAY: 0.0005
     DOUBLE_BIAS: True
-    SNAPSHOT_AFTER_TEST : False
+    SNAPSHOT_AFTER_TEST : True
     BBOX_REG: False
   RCNN_COMMON:
     HAS_RPN: True
