--- a/cfgs/vmrdext_faster_rcnn_res101.yml
+++ b/cfgs/vmrdext_faster_rcnn_res101.yml
@@ -1,20 +1,19 @@
-EXP_DIR: vgg16
+EXP_DIR: res101
 SCALES: [600,]
 TRAIN:
   COMMON:
     LEARNING_RATE: 0.002
+    LR_DECAY_STEPSIZE: [400000]
+    SNAPSHOT_ITERS: 40000
+    IMS_PER_BATCH: 2
+    MAX_EPOCH: 15
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [100000]
-    GAMMA : 0.1
-    IMS_PER_BATCH : 2
-    MAX_EPOCH: 30
-    WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
     DISPLAY: 20
+    WEIGHT_DECAY: 0.0001
     DOUBLE_BIAS: True
-    SNAPSHOT_ITERS: 10000
     SNAPSHOT_AFTER_TEST: True
-    AUGMENTATION: True
+    AUGMENTATION: False
   RCNN_COMMON:
     HAS_RPN: True
     RPN_POSITIVE_OVERLAP: 0.7
@@ -23,9 +22,6 @@ TRAIN:
     BATCH_SIZE: 256
     RPN_PRE_NMS_TOP_N : 12000
     RPN_POST_NMS_TOP_N : 2000
-  VMRN:
-    ONLINEDATA_BEGIN_ITER: 10000
-    RELCLS_GRAD: True
 TEST:
   RCNN_COMMON:
     HAS_RPN: True
@@ -34,11 +30,11 @@ TEST:
   COMMON:
     OBJ_DET_THRESHOLD: 0.7
 RCNN_COMMON:
-  POOLING_MODE: align
   POOLING_SIZE: 7
+  POOLING_MODE: align
+  # FPN
   ANCHOR_SCALES: [8, 16, 32]
-  ANCHOR_RATIOS: [0.33, 0.5, 1, 2, 3]
+  ANCHOR_RATIOS: [0.5, 1, 2]
   FEAT_STRIDE: [16,]
-VMRN:
-  SHARE_WEIGHTS: False
-  RELATION_CLASSIFIER: "vmrn"
+
+
