--- a/cfgs/coco+vmrd_faster_rcnn_res101.yml
+++ b/cfgs/coco+vmrd_faster_rcnn_res101.yml
@@ -1,19 +1,18 @@
-EXP_DIR: vgg16
+EXP_DIR: res101
 SCALES: [600,]
 TRAIN:
   COMMON:
-    LEARNING_RATE: 0.002
+    LEARNING_RATE: 0.003
+    LR_DECAY_STEPSIZE: [200000]
+    SNAPSHOT_ITERS: 20000
+    IMS_PER_BATCH : 4
+    MAX_EPOCH: 10
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [100000]
-    GAMMA : 0.1
-    IMS_PER_BATCH : 2
-    MAX_EPOCH: 30
-    WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
     DISPLAY: 20
+    WEIGHT_DECAY: 0.0001
     DOUBLE_BIAS: True
-    SNAPSHOT_ITERS: 10000
-    SNAPSHOT_AFTER_TEST: True
+    SNAPSHOT_AFTER_TEST : True
     AUGMENTATION: True
   RCNN_COMMON:
     HAS_RPN: True
@@ -23,22 +22,16 @@ TRAIN:
     BATCH_SIZE: 256
     RPN_PRE_NMS_TOP_N : 12000
     RPN_POST_NMS_TOP_N : 2000
-  VMRN:
-    ONLINEDATA_BEGIN_ITER: 10000
-    RELCLS_GRAD: True
 TEST:
+  COMMON:
+    OBJ_DET_THRESHOLD: 0.6
   RCNN_COMMON:
     HAS_RPN: True
     RPN_PRE_NMS_TOP_N : 6000
     RPN_POST_NMS_TOP_N : 300
-  COMMON:
-    OBJ_DET_THRESHOLD: 0.7
 RCNN_COMMON:
-  POOLING_MODE: align
   POOLING_SIZE: 7
-  ANCHOR_SCALES: [8, 16, 32]
-  ANCHOR_RATIOS: [0.33, 0.5, 1, 2, 3]
+  POOLING_MODE: align
+  ANCHOR_SCALES: [8,16,32 ]
+  ANCHOR_RATIOS: [0.5, 1, 2]
   FEAT_STRIDE: [16,]
-VMRN:
-  SHARE_WEIGHTS: False
-  RELATION_CLASSIFIER: "vmrn"
