--- a/cfgs/coco_faster_rcnn_res101.yml
+++ b/cfgs/coco_faster_rcnn_res101.yml
@@ -2,18 +2,17 @@ EXP_DIR: res101
 SCALES: [600,]
 TRAIN:
   COMMON:
-    LEARNING_RATE: 0.002
-    BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [80000]
-    GAMMA : 0.1
+    LEARNING_RATE: 0.003
+    LR_DECAY_STEPSIZE: [200000]
+    SNAPSHOT_ITERS: 20000
     IMS_PER_BATCH : 4
     MAX_EPOCH: 30
-    WEIGHT_DECAY: 0.0005
+    BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     PROPOSAL_METHOD: gt
     DISPLAY: 20
+    WEIGHT_DECAY: 0.0001
     DOUBLE_BIAS: True
-    SNAPSHOT_ITERS: 10000
-    SNAPSHOT_AFTER_TEST: True
+    SNAPSHOT_AFTER_TEST : True
     AUGMENTATION: True
   RCNN_COMMON:
     HAS_RPN: True
@@ -23,26 +22,17 @@ TRAIN:
     BATCH_SIZE: 256
     RPN_PRE_NMS_TOP_N : 12000
     RPN_POST_NMS_TOP_N : 2000
-  VMRN:
-    RELCLS_GRAD : False
-    FIX_OBJDET : True
-    OBJ_MODEL_PATH : output/vmrdext/res101/faster_rcnn_1_14_9920.pth
-    ONE_DATA_PER_IMG : False
 TEST:
+  COMMON:
+    OBJ_DET_THRESHOLD: 0.5
+    NMS: 0.5
   RCNN_COMMON:
     HAS_RPN: True
     RPN_PRE_NMS_TOP_N : 6000
     RPN_POST_NMS_TOP_N : 300
-  COMMON:
-    OBJ_DET_THRESHOLD: 0.7
 RCNN_COMMON:
-  POOLING_MODE: align
   POOLING_SIZE: 7
-  ANCHOR_SCALES: [8, 16, 32]
+  POOLING_MODE: align
+  ANCHOR_SCALES: [8,16,32 ]
   ANCHOR_RATIOS: [0.5, 1, 2]
   FEAT_STRIDE: [16,]
-  # OUT_LAYER: coco+vmrd
-VMRN:
-  SHARE_WEIGHTS: True
-  USE_CRF : True
-  SCORE_POSTPROC: True
