--- a/cfgs/vmrdcompv1_mgn_res101.yml
+++ b/cfgs/vmrdcompv1_mgn_res101.yml
@@ -7,13 +7,13 @@ TRAIN:
     GAMMA : 0.1
     SNAPSHOT_ITERS: 2000
     IMS_PER_BATCH : 2
-    MAX_EPOCH: 30
+    MAX_EPOCH: 20
     AUGMENTATION : True
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
     DISPLAY : 20
     WEIGHT_DECAY: 0.0005
     DOUBLE_BIAS: True
-    SNAPSHOT_AFTER_TEST : False
+    SNAPSHOT_AFTER_TEST : True
     BBOX_REG: False
   RCNN_COMMON:
     HAS_RPN: True
