--- a/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
+++ b/cfgs/vmrdcompv1_faster_rcnn_vmrn_res101.yml
@@ -4,10 +4,10 @@ TRAIN:
   COMMON:
     LEARNING_RATE: 0.002
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [100000]
+    LR_DECAY_STEPSIZE: [200000]
     GAMMA : 0.1
     IMS_PER_BATCH : 2
-    MAX_EPOCH: 30
+    MAX_EPOCH: 60
     WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
     DISPLAY: 20
@@ -34,5 +34,5 @@ RCNN_COMMON:
   POOLING_MODE: align
   POOLING_SIZE: 7
   ANCHOR_SCALES: [8, 16, 32]
-  ANCHOR_RATIOS: [0.5, 1, 2]
+  ANCHOR_RATIOS: [0.33, 0.5, 1, 2, 3]
   FEAT_STRIDE: [16,]
