--- a/cfgs/regrad_faster_rcnn_vmrn_res101.yml
+++ b/cfgs/regrad_faster_rcnn_vmrn_res101.yml
@@ -3,18 +3,18 @@ TRAIN:
   COMMON:
     LEARNING_RATE: 0.001
     BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-    LR_DECAY_STEPSIZE: [100000]
+    LR_DECAY_STEPSIZE: [200000]
     GAMMA : 0.1
     IMS_PER_BATCH : 1
     MAX_EPOCH: 100
     WEIGHT_DECAY: 0.0005
     PROPOSAL_METHOD: gt
     USE_VERTICAL_ROTATED : True
-    AUGMENTATION : False # When this is True, remember to go to utils/augmantation.py to config augmentation.
+    AUGMENTATION : True # When this is True, remember to go to utils/augmantation.py to config augmentation.
     AUGMENTER : Augmentation_VMRD()
     DISPLAY: 20
     DOUBLE_BIAS: True
-    SNAPSHOT_ITERS: 20
+    SNAPSHOT_ITERS: 30000
     SNAPSHOT_AFTER_TEST: False
   RCNN_COMMON:
     HAS_RPN: True
@@ -34,7 +34,7 @@ TEST:
     RPN_PRE_NMS_TOP_N : 6000
     RPN_POST_NMS_TOP_N : 300
   COMMON:
-    OBJ_DET_THRESHOLD: 0.7
+    OBJ_DET_THRESHOLD: 0.3
 RCNN_COMMON:
   POOLING_SIZE: 7
   POOLING_MODE: align
